Signed-off-by: Eslam abselnasser <96479431+imsemoo@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -1233,7 +1233,8 @@
         <div class="modal-dialog modal-dialog-centered modal-lg">
           <div class="modal-content c-modal__inner">
             <div class="modal-body">
-              <button type="button" class="c-modal__close" data-bs-dismiss="modal" aria-label="إغلاق"><i class="fa-solid fa-xmark"></i></button>
+              <button type="button" class="c-modal__close" data-bs-dismiss="modal" aria-label="إغلاق"><i
+                  class="fa-solid fa-xmark"></i></button>
 
               <p class="u-muted" style="margin:0" data-qm-chip></p>
               <h3 class="c-card__title" style="margin-top:10px" data-qm-title>اقتباس</h3>
@@ -1291,11 +1292,11 @@
               data-modal-title="خطاب سياسي — 2023"
               data-modal-description="مقتطف من مقابلة صحفية في 2023 يتناول فيها العاروري سياق المرحلة وتصاعد الأحداث."
               data-modal-badge="فيديو" data-modal-timestamp="أغسطس 2023" data-modal-source="مقابلة صحفية"
-              data-modal-image="https://dummyimage.com/600x400/dddddd/000000"
-              data-modal-video="assets/videos/featured.mp4" data-modal-audio-label="تفريغ صوتي 02:25">
+              data-modal-image="assets/images/articles/Horizontal/2.jpg" data-modal-video="assets/videos/featured.mp4"
+              data-modal-audio-label="تفريغ صوتي 02:25">
 
               <div class="c-media__media">
-                <img src="https://dummyimage.com/600x400/dddddd/000000" alt="خطاب سياسي — 2023" loading="lazy" />
+                <img src="assets/images/articles/Horizontal/3.jpg" alt="خطاب سياسي — 2023" loading="lazy" />
                 <div class="c-media__overlay" aria-hidden="true"></div>
 
                 <div class="c-media__badge">
@@ -1327,10 +1328,10 @@
             <article class="c-media" role="button" tabindex="0" data-media-card data-modal-title="صورة أرشيفية — عارورة"
               data-modal-description="صورة تعرّف بالمكان والجذور الأولى قبل اتساع المسار السياسي."
               data-modal-badge="صورة" data-modal-timestamp="مواد أرشيفية" data-modal-source="أرشيف مفتوح"
-              data-modal-image="https://dummyimage.com/600x400/dddddd/000000" data-modal-video-label="سرد بصري 01:05"
+              data-modal-image="assets/images/articles/Horizontal/1.jpg" data-modal-video-label="سرد بصري 01:05"
               data-modal-audio-label="تعليق 00:51">
               <div class="c-media__media">
-                <img src="https://dummyimage.com/600x400/dddddd/000000" alt="صورة أرشيفية — عارورة" loading="lazy" />
+                <img src="assets/images/articles/Horizontal/2.jpg" alt="صورة أرشيفية — عارورة" loading="lazy" />
                 <div class="c-media__badge">
                   <span class="c-badge c-badge--photo">صورة</span>
                 </div>
@@ -1345,10 +1346,10 @@
               data-modal-title="تغطية — مرج الزهور 1992"
               data-modal-description="محطة الإبعاد إلى مرج الزهور كما وثقتها صور وتقارير تلك المرحلة."
               data-modal-badge="فيديو" data-modal-timestamp="ديسمبر 1992" data-modal-source="تغطيات إعلامية"
-              data-modal-image="https://dummyimage.com/600x400/dddddd/000000" data-modal-video-label="لقطة 02:34"
+              data-modal-image="assets/images/articles/Horizontal/3.jpg" data-modal-video-label="لقطة 02:34"
               data-modal-audio-label="تسجيل 01:44">
               <div class="c-media__media">
-                <img src="https://dummyimage.com/600x400/dddddd/000000" alt="تغطية — مرج الزهور 1992" loading="lazy" />
+                <img src="assets/images/articles/Horizontal/3.jpg" alt="تغطية — مرج الزهور 1992" loading="lazy" />
                 <div class="c-media__overlay" aria-hidden="true"></div>
                 <div class="c-media__badge">
                   <span class="c-badge c-badge--video">فيديو</span>
@@ -1367,10 +1368,10 @@
               data-modal-title="ريل — لقطات سياق ميداني"
               data-modal-description="مقاطع رأسية قصيرة تساعد على رؤية المشهد بزاوية مختلفة وبإيقاع سريع."
               data-modal-badge="ريل" data-modal-timestamp="مواد متنوعة" data-modal-source="أرشيف السوشيال"
-              data-modal-image="https://dummyimage.com/600x400/dddddd/000000" data-modal-video-label="ريل 01:12"
+              data-modal-image="assets/images/articles/Horizontal/1.jpg" data-modal-video-label="ريل 01:12"
               data-modal-audio-label="صوتيات 00:39">
               <div class="c-media__media">
-                <img src="https://dummyimage.com/600x400/dddddd/000000" alt="ريل — لقطات سياق ميداني" loading="lazy" />
+                <img src="assets/images/articles/Horizontal/1.jpg" alt="ريل — لقطات سياق ميداني" loading="lazy" />
                 <div class="c-media__overlay" aria-hidden="true"></div>
                 <div class="c-media__badge">
                   <span class="c-badge c-badge--reel">ريل</span>
@@ -1388,10 +1389,10 @@
             <article class="c-media" role="button" tabindex="0" data-media-card data-modal-title="صور — محطات من المنفى"
               data-modal-description="صور مجمعة مرتبطة بمحطات التنقل والمنفى في سياق المسار السياسي."
               data-modal-badge="صورة" data-modal-timestamp="مواد أرشيفية" data-modal-source="كاتالوغ الأرشيف"
-              data-modal-image="https://dummyimage.com/600x400/dddddd/000000" data-modal-video-label="بانوراما 00:55"
+              data-modal-image="assets/images/articles/Horizontal/2.jpg" data-modal-video-label="بانوراما 00:55"
               data-modal-audio-label="مقطع 00:30">
               <div class="c-media__media">
-                <img src="https://dummyimage.com/600x400/dddddd/000000" alt="صور — محطات من المنفى" loading="lazy" />
+                <img src="assets/images/articles/Horizontal/2.jpg" alt="صور — محطات من المنفى" loading="lazy" />
                 <div class="c-media__badge">
                   <span class="c-badge c-badge--photo">صورة</span>
                 </div>
@@ -1406,11 +1407,10 @@
               data-modal-title="فيديو — تصريحات وقراءة مرحلة"
               data-modal-description="مقاطع من تصريحات وتحليلات مرتبطة بتحولات سياسية في الإقليم."
               data-modal-badge="فيديو" data-modal-timestamp="مواد متنوعة" data-modal-source="أرشيف مقابلات"
-              data-modal-image="https://dummyimage.com/600x400/dddddd/000000" data-modal-video-label="لقطات 03:03"
+              data-modal-image="assets/images/articles/Horizontal/3.jpg" data-modal-video-label="لقطات 03:03"
               data-modal-audio-label="تعليق 01:17">
               <div class="c-media__media">
-                <img src="https://dummyimage.com/600x400/dddddd/000000" alt="فيديو — تصريحات وقراءة مرحلة"
-                  loading="lazy" />
+                <img src="assets/images/articles/Horizontal/3.jpg" alt="فيديو — تصريحات وقراءة مرحلة" loading="lazy" />
                 <div class="c-media__overlay" aria-hidden="true"></div>
                 <div class="c-media__badge">
                   <span class="c-badge c-badge--video">فيديو</span>
@@ -1514,13 +1514,13 @@
                 <!-- Media preview (editorial strip) -->
                 <div class="c-collection__preview" aria-hidden="true">
                   <div class="c-collection__thumb c-collection__thumb--main">
-                    <img src="https://dummyimage.com/600x400/dddddd/000000" alt="" loading="lazy" />
+                    <img src="assets/images/articles/Horizontal/1.jpg" alt="" loading="lazy" />
                   </div>
                   <div class="c-collection__thumb">
-                    <img src="https://dummyimage.com/600x400/dddddd/000000" alt="" loading="lazy" />
+                    <img src="assets/images/articles/Horizontal/1.jpg" alt="" loading="lazy" />
                   </div>
                   <div class="c-collection__thumb">
-                    <img src="https://dummyimage.com/600x400/dddddd/000000" alt="" loading="lazy" />
+                    <img src="assets/images/articles/Horizontal/2.jpg" alt="" loading="lazy" />
                   </div>
                 </div>
 
@@ -1551,10 +1551,10 @@
 
                 <div class="c-collection__preview c-collection__preview--compact" aria-hidden="true">
                   <div class="c-collection__thumb c-collection__thumb--main">
-                    <img src="https://dummyimage.com/600x400/dddddd/000000" alt="" loading="lazy" />
+                    <img src="assets/images/articles/Horizontal/2.jpg" alt="" loading="lazy" />
                   </div>
                   <div class="c-collection__thumb">
-                    <img src="https://dummyimage.com/600x400/dddddd/000000" alt="" loading="lazy" />
+                    <img src="assets/images/articles/Horizontal/3.jpg" alt="" loading="lazy" />
                   </div>
                 </div>
 
@@ -1585,10 +1585,10 @@
 
                 <div class="c-collection__preview c-collection__preview--compact" aria-hidden="true">
                   <div class="c-collection__thumb c-collection__thumb--main">
-                    <img src="https://dummyimage.com/600x400/dddddd/000000" alt="" loading="lazy" />
+                    <img src="assets/images/articles/Horizontal/3.jpg" alt="" loading="lazy" />
                   </div>
                   <div class="c-collection__thumb">
-                    <img src="https://dummyimage.com/600x400/dddddd/000000" alt="" loading="lazy" />
+                    <img src="assets/images/articles/Horizontal/1.jpg" alt="" loading="lazy" />
                   </div>
                 </div>
 
@@ -1690,44 +1690,112 @@
       <!-- End News Section -->
 
     </main>
-    <!-- =========================================  Footer — Editorial Layout ========================================== -->
+    <!-- =========================================
+        Footer — Editorial / Archive (Upgraded)
+        Notes:
+        - 4 columns grid (Brand / Sections / Years / About)
+        - Optional "Archive strip" for status + CTA
+        - RTL-safe using logical properties
+      ========================================= -->
     <footer class="c-footer" role="contentinfo">
       <div class="container">
+
+        <!-- Archive strip (optional but recommended) -->
+        <div class="c-footer__strip" aria-label="ملخص الأرشيف">
+          <div class="c-footer__strip-left">
+            <span class="c-footer__status">
+              <span class="c-footer__dot" aria-hidden="true"></span>
+              أرشفة مستمرة
+            </span>
+
+            <span class="c-footer__update u-muted">
+              آخر تحديث: <strong>15 أبريل 2026</strong>
+            </span>
+          </div>
+
+          <div class="c-footer__strip-right">
+            <a class="c-footer__cta" href="media.html">
+              استعرض الوسائط
+              <i class="fa-solid fa-arrow-left" aria-hidden="true"></i>
+            </a>
+            <a class="c-footer__cta c-footer__cta--ghost" href="timeline.html">
+              افتح الخط الزمني
+            </a>
+          </div>
+        </div>
 
         <div class="c-footer__grid">
 
           <!-- Brand -->
           <div class="c-footer__brand">
-            <a class="c-footer__logo" href="index.html">
-              <img src="assets/images/logo.png" alt="">
+            <a class="c-footer__logo" href="index.html" aria-label="العودة للرئيسية">
+              <img src="assets/images/logo.png" alt="SALEH-AL-AROURI Archive" loading="lazy">
             </a>
+
             <p class="c-footer__desc">
               أرشيف توثيقي مستقل يجمع الصورة والصوت والنص
               في سياق واحد يحفظ الذاكرة ويمنع تشويه السرد.
             </p>
+
+            <!-- Quick meta chips -->
+            <div class="c-footer__chips" aria-label="مفاتيح سريعة">
+              <a class="c-footer__chip" href="media.html#videos"><i class="fa-solid fa-video"></i> فيديو</a>
+              <a class="c-footer__chip" href="media.html#reels"><i class="fa-solid fa-mobile-screen"></i> ريلز</a>
+              <a class="c-footer__chip" href="media.html#audio"><i class="fa-solid fa-wave-square"></i> صوت</a>
+              <a class="c-footer__chip" href="media.html#photos"><i class="fa-regular fa-images"></i> صور</a>
+            </div>
           </div>
 
           <!-- Navigation -->
-          <nav class="c-footer__nav" aria-label="روابط الفوتر">
+          <nav class="c-footer__nav" aria-label="روابط الأرشيف">
             <h4 class="c-footer__title">الأقسام</h4>
             <ul class="c-footer__list">
               <li><a href="timeline.html">الخط الزمني</a></li>
               <li><a href="media.html">الوسائط</a></li>
               <li><a href="news.html">الأخبار</a></li>
               <li><a href="biography.html">السيرة</a></li>
+              <li><a href="about.html">من نحن</a></li>
+              <li><a href="contact.html">تواصل</a></li>
             </ul>
+          </nav>
+
+          <!-- Years / Decades -->
+          <nav class="c-footer__years" aria-label="التصنيف حسب السنوات">
+            <h4 class="c-footer__title">حسب السنوات</h4>
+
+            <!-- You can link to timeline anchors or media filters -->
+            <div class="c-footer__year-grid">
+              <a class="c-footer__year" href="timeline.html#1966">1966</a>
+              <a class="c-footer__year" href="timeline.html#1987">1987</a>
+              <a class="c-footer__year" href="timeline.html#1992">1992</a>
+              <a class="c-footer__year" href="timeline.html#2000">2000</a>
+              <a class="c-footer__year" href="timeline.html#2010">2010</a>
+              <a class="c-footer__year" href="timeline.html#2017">2017</a>
+              <a class="c-footer__year is-strong" href="timeline.html#2024">2024</a>
+            </div>
+
+            <p class="c-footer__hint u-muted">
+              تقدر تعتبرها “بوابات” للخط الزمني أو فلاتر للوسائط لاحقًا.
+            </p>
           </nav>
 
           <!-- Meta -->
           <div class="c-footer__meta">
             <h4 class="c-footer__title">عن الأرشيف</h4>
+
             <p class="c-footer__small">
               جميع المواد المعروضة لأغراض التوثيق والتحليل
               وتعتمد على مصادر مفتوحة أو منشورة سابقًا.
             </p>
 
+            <div class="c-footer__legal">
+              <a class="c-footer__legal-link" href="about.html">سياسة المصدر</a>
+              <span class="c-footer__legal-sep" aria-hidden="true">•</span>
+              <a class="c-footer__legal-link" href="news.html">بيانات رسمية</a>
+            </div>
+
             <p class="c-footer__copyright">
-              © 2026 SALEH-AL-AROURI Archive<br />
+              © 2026 SALEH-AL-AROURI Archive<br>
               جميع الحقوق محفوظة
             </p>
           </div>
@@ -1736,13 +1804,16 @@
 
         <!-- Bottom bar -->
         <div class="c-footer__bottom">
-          <span class="c-footer__tag">
-            Built as a living archive
-          </span>
+          <div class="c-footer__bottom-left">
+            <span class="c-footer__tag">Built as a living archive</span>
+            <span class="c-footer__sep" aria-hidden="true">—</span>
+            <span class="c-footer__mini u-muted">واجهة توثيقية قابلة للتحديث والتوسع</span>
+          </div>
 
-          <div class="c-footer__links">
+          <div class="c-footer__links" aria-label="روابط سريعة">
             <a href="about.html">من نحن</a>
-            <a href="news.html">بيانات رسمية</a>
+            <a href="timeline.html">الخط الزمني</a>
+            <a href="media.html">الوسائط</a>
           </div>
         </div>
 
@@ -1752,11 +1823,10 @@
 
 
   </div>
-  <!-- ========================================= Media Detail Modal — Editorial Layout ========================================= -->
   <!-- =========================================
- Media Detail Modal — Pro Split Layout (50/50)
- UI-only refactor
-========================================= -->
+    Media Detail Modal — Pro Split Layout (50/50)
+    UI-only refactor
+    ========================================= -->
   <div class="modal fade c-modal" id="mediaDetailModal" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-xl modal-dialog-scrollable">
       <div class="modal-content c-modal__inner">
