--- a/index.html
+++ b/index.html
@@ -1082,7 +1082,7 @@
                   placeholder="ابحث بالكلمة أو السنة أو التصنيف" data-q-search />
               </div>
 
-              <div class="c-quotes__filters" data-q-filters>
+              <!-- <div class="c-quotes__filters" data-q-filters>
                 <button class="c-chip is-active" type="button" data-filter="all">
                   <i class="fa-solid fa-layer-group" aria-hidden="true"></i> الكل
                 </button>
@@ -1098,7 +1098,7 @@
                 <button class="c-chip" type="button" data-filter="speech">
                   <i class="fa-solid fa-bullhorn" aria-hidden="true"></i> خطاب
                 </button>
-              </div>
+              </div> -->
             </div>
           </div>
 
