Signed-off-by: Eslam abselnasser <96479431+imsemoo@users.noreply.github.com>

--- a/media.html
+++ b/media.html
@@ -248,7 +248,7 @@
               data-media-date="2024-01-02" data-modal-title="مقطع مرئي: قراءة سياسية وسياق"
               data-modal-description="مادة مرئية مختارة تقدم فكرة عامة عن المسار السياسي وتضع اللقطة داخل سياقها الزمني مع بيانات المصدر عند توفرها."
               data-modal-badge="فيديو" data-modal-timestamp="2 يناير 2024" data-modal-source="مصدر عند توفره"
-              data-modal-image="assets/images/videos/featured.jpg" data-modal-video="assets/videos/featured.mp4">
+              data-modal-image="assets/images/videos/featured.jpg" data-modal-video="assets/images/videos/featured.mp4">
               <div class="c-media-card__media u-aspect-16x9">
                 <img src="assets/images/videos/featured.jpg" alt="مقطع مرئي مختار" loading="lazy" />
                 <div class="c-media-card__overlay">
@@ -295,7 +295,7 @@
                 data-media-date="2020-05-12" data-modal-title="لقطات عمودية: مقتطف سريع"
                 data-modal-description="لقطات قصيرة للهواتف تقدم ملخصًا بصريًا سريعًا مع بطاقة تعريف ومصدر عند توفره."
                 data-modal-badge="ريل" data-modal-timestamp="12 مايو 2020" data-modal-source="مصدر عند توفره"
-                data-modal-image="assets/images/videos/thumb1.jpg" data-modal-video="assets/videos/reel1.mp4">
+                data-modal-image="assets/images/videos/thumb1.jpg" data-modal-video="assets/images/videos/reel1.mp4">
                 <div class="c-media-card__media u-aspect-9x16">
                   <img src="assets/images/videos/thumb1.jpg" alt="لقطات عمودية" loading="lazy" />
                   <div class="c-media-card__overlay">
@@ -345,7 +345,7 @@
               data-media-title="حوار مصور" data-media-year="2018" data-media-date="2018-03-10"
               data-modal-title="حوار مصور" data-modal-description="مقطع مصور ضمن الظهور الإعلامي يمكن ربطه بمحطة زمنية"
               data-modal-badge="فيديو" data-modal-timestamp="10 مارس 2018" data-modal-source="مصدر عند توفره"
-              data-modal-image="assets/images/videos/thumb2.jpg" data-modal-video="assets/videos/featured.mp4">
+              data-modal-image="assets/images/videos/thumb2.jpg" data-modal-video="assets/images/videos/featured.mp4">
               <div class="c-media-card__media u-aspect-16x9">
                 <img src="assets/images/videos/thumb2.jpg" alt="حوار مصور" loading="lazy" />
                 <div class="c-media-card__overlay">
@@ -366,7 +366,7 @@
               data-media-title="حوار مصور" data-media-year="2018" data-media-date="2018-03-10"
               data-modal-title="حوار مصور" data-modal-description="مقطع مصور ضمن الظهور الإعلامي يمكن ربطه بمحطة زمنية"
               data-modal-badge="فيديو" data-modal-timestamp="10 مارس 2018" data-modal-source="مصدر عند توفره"
-              data-modal-image="assets/images/videos/thumb2.jpg" data-modal-video="assets/videos/featured.mp4">
+              data-modal-image="assets/images/videos/thumb2.jpg" data-modal-video="assets/images/videos/featured.mp4">
               <div class="c-media-card__media u-aspect-16x9">
                 <img src="assets/images/videos/thumb2.jpg" alt="حوار مصور" loading="lazy" />
                 <div class="c-media-card__overlay">
@@ -387,7 +387,7 @@
               data-media-title="حوار مصور" data-media-year="2018" data-media-date="2018-03-10"
               data-modal-title="حوار مصور" data-modal-description="مقطع مصور ضمن الظهور الإعلامي يمكن ربطه بمحطة زمنية"
               data-modal-badge="فيديو" data-modal-timestamp="10 مارس 2018" data-modal-source="مصدر عند توفره"
-              data-modal-image="assets/images/videos/thumb2.jpg" data-modal-video="assets/videos/featured.mp4">
+              data-modal-image="assets/images/videos/thumb2.jpg" data-modal-video="assets/images/videos/featured.mp4">
               <div class="c-media-card__media u-aspect-16x9">
                 <img src="assets/images/videos/thumb2.jpg" alt="حوار مصور" loading="lazy" />
                 <div class="c-media-card__overlay">
@@ -439,7 +439,7 @@
               data-media-title="لقطة عمودية قصيرة" data-media-year="2021" data-media-date="2021-11-03"
               data-modal-title="لقطة عمودية قصيرة" data-modal-description="مادة عمودية للهواتف ضمن توثيق سريع"
               data-modal-badge="ريل" data-modal-timestamp="3 نوفمبر 2021" data-modal-source="مصدر عند توفره"
-              data-modal-image="assets/images/videos/thumb1.jpg" data-modal-video="assets/videos/reel1.mp4">
+              data-modal-image="assets/images/videos/thumb1.jpg" data-modal-video="assets/images/videos/reel1.mp4">
               <div class="c-media-card__media u-aspect-9x16">
                 <img src="assets/images/videos/thumb1.jpg" alt="لقطة عمودية قصيرة" loading="lazy" />
                 <div class="c-media-card__overlay">
@@ -460,7 +460,7 @@
               data-media-title="لقطة عمودية قصيرة" data-media-year="2021" data-media-date="2021-11-03"
               data-modal-title="لقطة عمودية قصيرة" data-modal-description="مادة عمودية للهواتف ضمن توثيق سريع"
               data-modal-badge="ريل" data-modal-timestamp="3 نوفمبر 2021" data-modal-source="مصدر عند توفره"
-              data-modal-image="assets/images/videos/thumb1.jpg" data-modal-video="assets/videos/reel1.mp4">
+              data-modal-image="assets/images/videos/thumb1.jpg" data-modal-video="assets/images/videos/reel1.mp4">
               <div class="c-media-card__media u-aspect-9x16">
                 <img src="assets/images/videos/thumb1.jpg" alt="لقطة عمودية قصيرة" loading="lazy" />
                 <div class="c-media-card__overlay">
@@ -481,7 +481,7 @@
               data-media-title="لقطة عمودية قصيرة" data-media-year="2021" data-media-date="2021-11-03"
               data-modal-title="لقطة عمودية قصيرة" data-modal-description="مادة عمودية للهواتف ضمن توثيق سريع"
               data-modal-badge="ريل" data-modal-timestamp="3 نوفمبر 2021" data-modal-source="مصدر عند توفره"
-              data-modal-image="assets/images/videos/thumb1.jpg" data-modal-video="assets/videos/reel1.mp4">
+              data-modal-image="assets/images/videos/thumb1.jpg" data-modal-video="assets/images/videos/reel1.mp4">
               <div class="c-media-card__media u-aspect-9x16">
                 <img src="assets/images/videos/thumb1.jpg" alt="لقطة عمودية قصيرة" loading="lazy" />
                 <div class="c-media-card__overlay">
@@ -502,7 +502,7 @@
               data-media-title="لقطة عمودية قصيرة" data-media-year="2021" data-media-date="2021-11-03"
               data-modal-title="لقطة عمودية قصيرة" data-modal-description="مادة عمودية للهواتف ضمن توثيق سريع"
               data-modal-badge="ريل" data-modal-timestamp="3 نوفمبر 2021" data-modal-source="مصدر عند توفره"
-              data-modal-image="assets/images/videos/thumb1.jpg" data-modal-video="assets/videos/reel1.mp4">
+              data-modal-image="assets/images/videos/thumb1.jpg" data-modal-video="assets/images/videos/reel1.mp4">
               <div class="c-media-card__media u-aspect-9x16">
                 <img src="assets/images/videos/thumb1.jpg" alt="لقطة عمودية قصيرة" loading="lazy" />
                 <div class="c-media-card__overlay">
