--- a/news.html
+++ b/news.html
@@ -473,7 +473,8 @@
                     data-modal-title="تقرير ميداني: تحديثات توثيق جديدة"
                     data-modal-description="تقرير مرئي يشرح عملية جمع المادة وتوثيقها وربطها بالخط الزمني."
                     data-modal-badge="فيديو" data-modal-timestamp="فبراير 2026" data-modal-source="مركز الوسائط"
-                    data-modal-image="assets/img/articles/film1.jpg" data-modal-video="assets/videos/featured.mp4">
+                    data-modal-image="assets/images/articles/film1.jpg"
+                    data-modal-video="assets/images/videos/featured.mp4">
                     مشاهدة التقرير
                     <i class="fa-solid fa-arrow-left" aria-hidden="true"></i>
                   </button>
@@ -487,7 +488,7 @@
 
     </main>
 
-   <!-- =========================================
+    <!-- =========================================
         Footer — Editorial / Archive (Upgraded)
         Notes:
         - 4 columns grid (Brand / Sections / Years / About)
