--- a/single-article.html
+++ b/single-article.html
@@ -240,7 +240,7 @@
                       data-modal-title="مقطع فيديو مرتبط" data-modal-description="مادة مرئية مرتبطة بسياق هذه المقالة"
                       data-modal-badge="فيديو" data-modal-timestamp="2020" data-modal-source="مصدر عند توفره"
                       data-modal-image="assets/images/videos/featured.jpg"
-                      data-modal-video="assets/videos/featured.mp4">
+                      data-modal-video="assets/images/videos/featured.mp4">
                       <div class="c-attach__media">
                         <img src="assets/images/videos/featured.jpg" alt="مقطع فيديو مرتبط" loading="lazy" />
                         <div class="c-attach__badge"><i class="fa-solid fa-circle-play"></i> فيديو</div>
