Signed-off-by: Eslam abselnasser <96479431+imsemoo@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -1056,7 +1056,7 @@
                 <div class="c-media__overlay" aria-hidden="true"></div>
 
                 <div class="c-media__badge">
-                  <span class="c-badge c-badge--video">فيديو</span>
+                  <span class="c-badge c-badge--video"><i class="fa-solid fa-video"></i>فيديو</span>
                 </div>
 
                 <div class="c-media__play" aria-hidden="true">
@@ -1103,7 +1103,7 @@
                 <img src="assets/images/articles/Horizontal/3.jpg" alt="تغطية — مرج الزهور 1992" loading="lazy" />
                 <div class="c-media__overlay" aria-hidden="true"></div>
                 <div class="c-media__badge">
-                  <span class="c-badge c-badge--video">فيديو</span>
+                  <span class="c-badge c-badge--video"><i class="fa-solid fa-video"></i>فيديو</span>
                 </div>
                 <div class="c-media__play c-media__play--sm" aria-hidden="true">
                   <i class="fa-solid fa-play"></i>
@@ -1140,10 +1140,10 @@
       </section>
       <!-- End Latest Media Section -->
       <!-- =========================================
-  REELS — Home Section (Premium)
-  - Grid + Featured card
-  - Opens dedicated reels modal (vertical feed)
-========================================== -->
+        REELS — Home Section (Premium)
+        - Grid + Featured card
+        - Opens dedicated reels modal (vertical feed)
+      ========================================== -->
       <section class="u-section c-reels" aria-label="الريلز">
         <div class="container">
 
@@ -1174,11 +1174,13 @@
               <div class="c-reel-card__media" aria-hidden="true">
                 <img src="assets/images/articles/Vertical/1.jpg" alt="" loading="lazy">
                 <span class="c-reel-card__shade" aria-hidden="true"></span>
+                <div class="c-media-card__badge">
+                  <span class="c-badge c-badge--reel ">
+                    <i class="fa-solid fa-video" aria-hidden="true"></i>
+                    ريل
+                  </span>
+                </div>
 
-                <span class="c-reel-card__badge">
-                  <i class="fa-solid fa-video" aria-hidden="true"></i>
-                  ريل
-                </span>
 
                 <span class="c-reel-card__play" aria-hidden="true">
                   <i class="fa-solid fa-play"></i>
@@ -1211,7 +1213,11 @@
               <div class="c-reel-card__media" aria-hidden="true">
                 <img src="assets/images/articles/Vertical/2.jpg" alt="" loading="lazy">
                 <span class="c-reel-card__shade" aria-hidden="true"></span>
-                <span class="c-reel-card__badge"><i class="fa-solid fa-video"></i> ريل</span>
+                <div class="c-media-card__badge">
+                  <span class="c-badge c-badge--reel ">
+                    <i class="fa-solid fa-video"></i> ريل
+                  </span>
+                </div>
                 <span class="c-reel-card__play" aria-hidden="true"><i class="fa-solid fa-play"></i></span>
               </div>
 
@@ -1229,7 +1235,9 @@
               <div class="c-reel-card__media" aria-hidden="true">
                 <img src="assets/images/articles/Vertical/3.jpg" alt="" loading="lazy">
                 <span class="c-reel-card__shade" aria-hidden="true"></span>
-                <span class="c-reel-card__badge"><i class="fa-solid fa-video"></i> ريل</span>
+                <div class="c-media-card__badge">
+                  <span class="c-badge c-badge--reel "><i class="fa-solid fa-video"></i> ريل</span>
+                </div>
                 <span class="c-reel-card__play" aria-hidden="true"><i class="fa-solid fa-play"></i></span>
               </div>
 
